Adding new jumia test suite3

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,7533],[],[[5,0,6,[7],[0,6936,32,8],[]],[9,0,10,[11],[0,6968,2,12],[]]],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,10554],[],[[5,0,6,[7],[1,9542,467],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Inscription  Page","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests/jumia__inscription__page.robot","*Tests/jumia__inscription__page.robot","*<p>This suite responsible to insure that the Register page works properly\x3c/p>","*⁡⁢⁣⁢# //ANCHOR - The Transition from home page to connection page is detected by cloudflare⁡","*<p>Charger la page de connection quand je click sur le button connecter\x3c/p>","*suite2-test1(ignore)","*Button with locator '//*[@id=\"pop\"]/div/section/button' not found.","*Test Load Connection using direct link","*<p>Charger la page de connection a traver le lien direct du jumia connect\x3c/p>","*suite2-test2","*OSError: [Errno 30] Read-only file system: '/Screenshots'"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Home  Page","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests/jumia__home__page.robot","*Tests/jumia__home__page.robot","*<p>This test case detected to make sure that home page is working properly\x3c/p>","*Test Home Page Load","*<p>test si la page d'acceuil se charge a travers le bon lien\x3c/p>","*suite1-test1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"suite2-test1(ignore)","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"suite2-test2","pass":0,"skip":0}],[{"elapsed":"00:00:08","fail":2,"id":"s1","label":"Inscription  Page","name":"Inscription  Page","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"suite1-test1","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Home  Page","name":"Home  Page","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742689524188;
+window.output["baseMillis"] = 1742783271825;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7536;
+window.output["generated"] = 10557;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
