--- a/log.html
+++ b/log.html
@@ -1806,25 +1806,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,7533],[],[[5,0,6,[7],[0,6936,32,8],[[0,9,10,0,11,12,0,0,[0,6940,27],[[6941,2,13],[6962,3,15],[6963,5,8]]],[0,16,10,0,17,18,0,0,[3,6967,0],[]],[0,19,10,0,20,21,0,0,[3,6967,0],[]],[0,22,23,0,24,25,0,0,[3,6967,0],[]]]],[26,0,27,[28],[0,6968,2,29],[[0,30,10,0,31,32,0,0,[0,6968,2],[[6969,3,15],[6969,5,29]]]]]],[[1,34,35,0,36,37,0,0,[1,150,6784],[[0,38,10,0,39,40,0,0,[1,151,3781],[[151,2,41]]],[0,22,23,0,24,42,0,0,[1,3932,3002],[[6933,2,43]]]]],[2,44,35,0,0,0,0,45,[1,6970,563],[[0,46,10,0,47,0,0,0,[1,6970,563],[]]]]],[2,0,2,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,10554],[],[[5,0,6,[7],[1,9542,467],[[0,8,9,0,10,11,0,0,[1,9543,466],[[10009,2,12]]]]]],[[1,13,14,0,15,16,0,0,[1,73,9469],[[0,17,9,0,18,19,0,0,[1,73,4662],[[73,2,20]]],[0,21,9,0,22,0,0,0,[1,4736,1796],[]],[0,23,24,0,25,26,0,0,[1,6532,3009],[[9536,2,27]]]]],[2,28,14,0,0,0,0,29,[1,10010,544],[[0,30,9,0,31,0,0,0,[1,10010,543],[]]]]],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Inscription  Page","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests/jumia__inscription__page.robot","*Tests/jumia__inscription__page.robot","*<p>This suite responsible to insure that the Register page works properly\x3c/p>","*⁡⁢⁣⁢# //ANCHOR - The Transition from home page to connection page is detected by cloudflare⁡","*<p>Charger la page de connection quand je click sur le button connecter\x3c/p>","*suite2-test1(ignore)","*Button with locator '//*[@id=\"pop\"]/div/section/button' not found.","*Click Button","*SeleniumLibrary","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*locator=${CLOSE_BUTTON_IN_POPUP}","*Clicking button '//*[@id=\"pop\"]/div/section/button'.","*s1-t1-k1","*Keyword 'Capture Page Screenshot' could not be run on failure: [Errno 30] Read-only file system: '/Screenshots'","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*locator=//label[@for=\"dpdw-login\"]","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*locator=${SE_CONNECTER_BUTTON}","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*time_=5s","*Test Load Connection using direct link","*<p>Charger la page de connection a traver le lien direct du jumia connect\x3c/p>","*suite2-test2","*OSError: [Errno 30] Read-only file system: '/Screenshots'","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*filename=connectionPage.png","*s1-t2-k1","*Acces to Jumia Home page","*keywords_recherche","*<p>Overture la page principle de \"Jumia\"\x3c/p>","*BASE_URL_CUSTOM=https://my.jumia.ma/interaction/1ybCGZ0RRXQxpRQgHHamo/fr-ma/identification","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL_CUSTOM}, browser=firefox","eNqtzL8OgjAQgPFXubB0stXVIIuDbIROxu3AK5yxf3ItEd5eeQfXL798XaLAYYJB4ieTgHIs5OKqoEQYMBMs8gZVI8y/fqnmUlI+G+M3/Vo8o/ZoOBQSHAvHYE7bcL09jtbe+zXZfmpb9NE4OezuSaGw4xF3WjX/e9UGG6W/EhRIeg==","*3s","*Slept 3 seconds","*Close All Browser Navigation to home page","*test keyword","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Home  Page","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests/jumia__home__page.robot","*Tests/jumia__home__page.robot","*<p>This test case detected to make sure that home page is working properly\x3c/p>","*Test Home Page Load","*<p>test si la page d'acceuil se charge a travers le bon lien\x3c/p>","*suite1-test1","*Capture Page Screenshot","*SeleniumLibrary","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*filename=browser.png","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"Screenshots/SUITE1/browser.png\"><img src=\"Screenshots/SUITE1/browser.png\" width=\"800px\">\x3c/a>","*Acces to Jumia Home page","*keywords_recherche","*<p>Overture la page principle de \"Jumia\"\x3c/p>","*BASE_URL_CUSTOM=${BASE_URL}","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL_CUSTOM}, browser=firefox","*Opening browser 'firefox' to base url '<a href=\"https://www.jumia.ma/\">https://www.jumia.ma/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*Close All Browser Navigation to home page","*test keyword","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"suite2-test1(ignore)","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"suite2-test2","pass":0,"skip":0}],[{"elapsed":"00:00:08","fail":2,"id":"s1","label":"Inscription  Page","name":"Inscription  Page","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"suite1-test1","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Home  Page","name":"Home  Page","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[6962,3,15,14],[6969,3,15,33]];
+window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742689524188;
+window.output["baseMillis"] = 1742783271825;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7536;
+window.output["generated"] = 10557;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
