--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,14036],[[4,5,6,0,[],[1,8,14027],[[7,8,9,10,[],[1,9,14024],[],[[11,0,12,[13],[1,6456,6858],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11468],[[4,5,6,0,[],[1,10,11457],[[7,8,9,10,[],[1,11,11455],[],[[11,0,12,[13],[1,10502,261],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Formation Projet","*/Users/mac/Documents/MasteringTesting/formation_projet","*..","*Tests","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests","*../Tests","*Inscription  Page","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests/jumia__inscription__page.robot","*../Tests/jumia__inscription__page.robot","*<p>This suite responsible to insure that the Register page works properly\x3c/p>","*Test Lod Conneter Page","*<p>Charger la page de connection quand je click sur le button connecter\x3c/p>","*suite2-test1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Formation Projet","*/Users/mac/Documents/MasteringTesting/formation_projet","*..","*Tests","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests","*../Tests","*Home  Page","*/Users/mac/Documents/MasteringTesting/formation_projet/Tests/jumia__home__page.robot","*../Tests/jumia__home__page.robot","*<p>This test case detected to make sure that home page is working properly\x3c/p>","*Test Home Page Load","*<p>test si la page d'acceuil se charge a travers le bon lien\x3c/p>","*suite1-test1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:07","fail":0,"label":"suite2-test1","pass":1,"skip":0}],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Formation Projet","name":"Formation Projet","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1","label":"Formation Projet.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1-s1","label":"Formation Projet.Tests.Inscription  Page","name":"Inscription  Page","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"suite1-test1","pass":1,"skip":0}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Formation Projet","name":"Formation Projet","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Formation Projet.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1-s1","label":"Formation Projet.Tests.Home  Page","name":"Home  Page","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1742688986162;
+window.output["baseMillis"] = 1742783271744;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14040;
+window.output["generated"] = 11470;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
